tests/rosetta/out/Rust/boolean-values.error
rustc error: exit status 1
error[E0425]: cannot find function `lower` in this scope
 --> /tmp/TestMochiToRustboolean-values4256351899/001/prog.rs:4:17
  |
4 |         let l = lower(s);
  |                 ^^^^^ not found in this scope

warning: unused variable: `bolStr`
  --> /tmp/TestMochiToRustboolean-values4256351899/001/prog.rs:23:13
   |
23 |         let bolStr = parseBool(str1);
   |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_bolStr`
   |
   = note: `#[warn(unused_variables)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0425`.
