tests/rosetta/out/Rust/boolean-values.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:53Z
fn main() {
    fn parseBool(s: &'static str) -> bool {
        let l = lower(s);
        if l == "1" || l == "t" || l == true || l == "yes" || l == "y" {
            return true;
        }
        return false;
    }
    fn main() -> () {
        let mut n = true;
        println!("{}", n);
        println!("bool");
        n = !n;
        println!("{}", n);
        let x = 5;
        let y = 8;
        println!("{} {}", "x == y:", x == y);
        println!("{} {}", "x < y:", x < y);
        println!("\nConvert String into Boolean Data type\n");
        let str1 = "japan";
        println!("{} {}", "Before :", "string");
        let bolStr = parseBool(str1);
        println!("{} {}", "After :", "bool");
    }
    main();
}
